--- a/signup.html
+++ b/signup.html
@@ -35,7 +35,7 @@
                                                     placeholder="Your Password" id="logpass" autocomplete="off">
                                                 <i class="input-icon uil uil-lock-alt"></i>
                                             </div>
-                                            <a href="Home.html" class="btn mt-4" id="signup">submit</a>
+                                            <a href="Home.html" class="btn mt-4" id="login">submit</a>
                                             <p class="mb-0 mt-4 text-center"><a href="#0" class="link">Forgot your password?</a></p>
                                         </div>
                                     </div>
@@ -59,7 +59,7 @@
                                                     placeholder="Your Password" id="logpass" autocomplete="off">
                                                 <i class="input-icon uil uil-lock-alt"></i>
                                             </div>
-                                            <a href="#" class="btn mt-4" id="signup">submit</a>
+                                            <a href="Home.html" class="btn mt-4" id="signup">submit</a>
                                         </div>
                                     </div>
                                 </div>
