--- a/signup.html
+++ b/signup.html
@@ -45,18 +45,18 @@
                                         <div class="section text-center">
                                             <h4 class="mb-4 pb-3">Sign Up</h4>
                                             <div class="form-group">
-                                                <input type="text" name="logname" class="form-style"
-                                                    placeholder="Your Full Name" id="logname" autocomplete="off">
+                                                <input type="text" name="signupname" class="form-style"
+                                                    placeholder="Your Full Name" id="signupname" autocomplete="off">
                                                 <i class="input-icon uil uil-user"></i>
                                             </div>
                                             <div class="form-group mt-2">
-                                                <input type="email" name="logemail" class="form-style"
-                                                    placeholder="Your Email" id="logemail" autocomplete="off">
+                                                <input type="email" name="signupemail" class="form-style"
+                                                    placeholder="Your Email" id="signupemail" autocomplete="off">
                                                 <i class="input-icon uil uil-at"></i>
                                             </div>
                                             <div class="form-group mt-2">
-                                                <input type="password" name="logpass" class="form-style"
-                                                    placeholder="Your Password" id="logpass" autocomplete="off">
+                                                <input type="password" name="signuppass" class="form-style"
+                                                    placeholder="Your Password" id="signuppass" autocomplete="off">
                                                 <i class="input-icon uil uil-lock-alt"></i>
                                             </div>
                                             <a href="Home.html" class="btn mt-4" id="signup">submit</a>
@@ -77,9 +77,9 @@
     $("#signup").on('click',function(){
         $.ajax({
             data : { 
-                "name": $('#logname').val(),
-                "email":$('#logemail').val(),
-                "password":$("#logpass")
+                "email":$('#signupemail').val(),
+                "name": $('#signupname').val(),
+                "password":$("#signuppass")
             },
             type:"post",
             url:"http://localhost:8080/signup",
