--- a/signup.html
+++ b/signup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LOG IN >> SIGN UP</title>
+    <title>Login / Signup</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.9/css/unicons.css">
     <link rel="stylesheet" href="signup.css" />
@@ -26,13 +26,11 @@
                                         <div class="section text-center">
                                             <h4 class="mb-4 pb-3">Log In</h4>
                                             <div class="form-group">
-                                                <input type="email" name="logemail" class="form-style"
-                                                    placeholder="Your Email" id="logemail" autocomplete="off">
+                                                <input type="email" name="logemail" class="form-style" placeholder="Your Email" id="logemail" autocomplete="off">
                                                 <i class="input-icon uil uil-at"></i>
                                             </div>
                                             <div class="form-group mt-2">
-                                                <input type="password" name="logpass" class="form-style"
-                                                    placeholder="Your Password" id="logpass" autocomplete="off">
+                                                <input type="password" name="logpass" class="form-style" placeholder="Your Password" id="logpass" autocomplete="off">
                                                 <i class="input-icon uil uil-lock-alt"></i>
                                             </div>
                                             <a href="Home.html" class="btn mt-4" id="login">submit</a>
@@ -45,18 +43,15 @@
                                         <div class="section text-center">
                                             <h4 class="mb-4 pb-3">Sign Up</h4>
                                             <div class="form-group">
-                                                <input type="text" name="signupname" class="form-style"
-                                                    placeholder="Your Full Name" id="signupname" autocomplete="off">
+                                                <input type="text" name="signupname" class="form-style" placeholder="Your Full Name" id="signupname" autocomplete="off">
                                                 <i class="input-icon uil uil-user"></i>
                                             </div>
                                             <div class="form-group mt-2">
-                                                <input type="email" name="signupemail" class="form-style"
-                                                    placeholder="Your Email" id="signupemail" autocomplete="off">
+                                                <input type="email" name="signupemail" class="form-style" placeholder="Your Email" id="signupemail" autocomplete="off">
                                                 <i class="input-icon uil uil-at"></i>
                                             </div>
                                             <div class="form-group mt-2">
-                                                <input type="password" name="signuppass" class="form-style"
-                                                    placeholder="Your Password" id="signuppass" autocomplete="off">
+                                                <input type="password" name="signuppass" class="form-style" placeholder="Your Password" id="signuppass" autocomplete="off">
                                                 <i class="input-icon uil uil-lock-alt"></i>
                                             </div>
                                             <a href="Home.html" class="btn mt-4" id="signup">submit</a>
