--- a/signup/signup.html
+++ b/signup/signup.html
@@ -34,7 +34,7 @@
                                                 <i class="input-icon uil uil-lock-alt"></i>
                                             </div>
                                             <a href="Home.html" class="btn mt-4" id="login">submit</a>
-                                            <p class="mb-0 mt-4 text-center"><a href="#0" class="link">Forgot your password?</a></p>
+                                            <p class="mb-0 mt-4 text-center"><a href="../Forget_password/forget_password.html" class="link">Forgot your password?</a></p>
                                         </div>
                                     </div>
                                 </div>
