--- a/signup/signup.html
+++ b/signup/signup.html
@@ -54,7 +54,7 @@
                                                 <input type="password" name="signuppass" class="form-style" placeholder="Your Password" id="signuppass" autocomplete="off">
                                                 <i class="input-icon uil uil-lock-alt"></i>
                                             </div>
-                                            <a href="Home.html" class="btn mt-4" id="signup">submit</a>
+                                            <a href="../Home/Home.html" class="btn mt-4" id="signup">submit</a>
                                         </div>
                                     </div>
                                 </div>
