--- a/about_me/about_me.html
+++ b/about_me/about_me.html
@@ -4,8 +4,16 @@
         <title>about me</title>
 
     </haed>
-
     <body>
-        
+        <div class="dream_presentation">
+            <h1>
+                안녕
+            </h1>
+
+        </div>
+
+        <h1>
+            안녕
+        </h1>
     </body>
 </html>
