--- a/about_me/about_me.html
+++ b/about_me/about_me.html
@@ -5,11 +5,8 @@
 
     </haed>
     <body>
-        <div class="dream_presentation">
-            <h1>
-                안녕
-            </h1>
-
+        <div class="first_tab">
+            he
         </div>
 
         <h1>
