ADD :: 내가 대통령이 되면

--- a/first_tab/first_tab.html
+++ b/first_tab/first_tab.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html>
+    <link rel="stylesheet" href="first_tab.css">
+    
     <haed>
         <title>about me</title>
 
     </haed>
     <body>
         <div class="first_tab">
-            he
+            <h1>
+                hello
+            </h1>
         </div>
 
-        <h1>
-            안녕
-        </h1>
+        <div>
+            
+        </div>
     </body>
 </html>
