ADD :: color edit

--- a/first_tab/first_tab.html
+++ b/first_tab/first_tab.html
@@ -8,13 +8,16 @@
     </haed>
     <body>
         <div class="first_tab">
+            <div class="bonobono_image">
+                .
+            </div>
             <h1>
                 hello
             </h1>
         </div>
 
         <div>
-            
+
         </div>
     </body>
 </html>
