--- a/first_tab/first_tab.html
+++ b/first_tab/first_tab.html
@@ -8,16 +8,14 @@
     </haed>
     <body>
         <div class="first_tab">
-            <div class="bonobono_image">
-                .
-            </div>
-            <h1>
-                hello
-            </h1>
-        </div>
+            <h1 class="dream_presentation">꿈 발표</h1>
+                <div class="bonobono_image">
 
-        <div>
+                </div>
 
+                <div>
+
+                </div>
         </div>
     </body>
 </html>
