--- a/signup/signup.html
+++ b/signup/signup.html
@@ -96,14 +96,7 @@
                 "password":$("#signuppass")
             },
             type:"post",
-            url:"http://localhost:8080/signup",
-            success:function(result){
-                console.log('result ='+ result);
-                console.log("success");
-            },
-            error:function(result){
-                console.log("error");
-            }
+            url:"http://localhost:8080/signup"
         });
     });
 </script>
