--- a/Home/Home.html
+++ b/Home/Home.html
@@ -34,22 +34,22 @@
                 <p class="photo_small">
                     <p class="photo_center">
                         <p class="center_dot">
-                            <p class="example_project" style="transform: rotate(22.5deg)";></p>
-                            <p class="example_project" style="transform: rotate(0deg)";></p>
-                            <p class="example_project" style="transform: rotate(45deg)";></p>
-                            <p class="example_project" style="transform: rotate(67.5deg)";></p>
-                            <p class="example_project" style="transform: rotate(90deg)";></p>
-                            <p class="example_project" style="transform: rotate(112.5deg)";></p>
-                            <p class="example_project" style="transform: rotate(135deg)";></p>
-                            <p class="example_project" style="transform: rotate(157.5deg)";></p>
-                            <p class="example_project" style="transform: rotate(180deg)";></p>
-                            <p class="example_project" style="transform: rotate(202.5deg)";></p>
-                            <p class="example_project" style="transform: rotate(225deg)";></p>
-                            <p class="example_project" style="transform: rotate(247.5deg)";></p>
-                            <p class="example_project" style="transform: rotate(270deg)";></p>
-                            <p class="example_project" style="transform: rotate(292.5deg)";></p>
-                            <p class="example_project" style="transform: rotate(315deg)";></p>
-                            <p class="example_project" style="transform: rotate(337.5deg)";></p>
+                            <p class="project" style="transform: rotate(22.5deg)";></p>
+                            <p class="project" style="transform: rotate(0deg)";></p>
+                            <p class="project" style="transform: rotate(45deg)";></p>
+                            <p class="project" style="transform: rotate(67.5deg)";></p>
+                            <p class="project" style="transform: rotate(90deg)";></p>
+                            <p class="project" style="transform: rotate(112.5deg)";></p>
+                            <p class="project" style="transform: rotate(135deg)";></p>
+                            <p class="project" style="transform: rotate(157.5deg)";></p>
+                            <p class="project" style="transform: rotate(180deg)";></p>
+                            <p class="project" style="transform: rotate(202.5deg)";></p>
+                            <p class="project" style="transform: rotate(225deg)";></p>
+                            <p class="project" style="transform: rotate(247.5deg)";></p>
+                            <p class="project" style="transform: rotate(270deg)";></p>
+                            <p class="project" style="transform: rotate(292.5deg)";></p>
+                            <p class="project" style="transform: rotate(315deg)";></p>
+                            <p class="project" style="transform: rotate(337.5deg)";></p>
                     
                         </p>
                                 
