--- a/Home/Home.html
+++ b/Home/Home.html
@@ -30,6 +30,8 @@
         </header>
         <div class="background"><div>
 
+            <div class="zoom-box">hi</div>
+
                 <!--photo-->
                 <p class="photo_small">
                     <p class="photo_center">
