--- a/drag_practice/drag_practice.html
+++ b/drag_practice/drag_practice.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Drag and Rotate JS</title>
+  <title>Drag and Rotate JS</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel="stylesheet" href="./drag_practice.css">
 
