--- a/Home/Home.html
+++ b/Home/Home.html
@@ -24,6 +24,7 @@
             <ul class="navbar">
                 <li><a href="" class="Portfolio_Home">Portfolio</a></li>
                 <li><a href="" class="Portfolio_Contact_Me">Contect me</a></li>
+                <li><a href="../signup/signup.html" class="login">Login</a></li>
             </ul>
         </div>
             
