--- a/signup/signup.html
+++ b/signup/signup.html
@@ -96,7 +96,7 @@
                 "password":$("#signuppass")
             },
             type:"post",
-            url:"http://localhost:8080/signup"
+            url:"http://10.80.162.141:8080/signup"
         });
     });
 </script>
