--- a/Home/Home.html
+++ b/Home/Home.html
@@ -7,17 +7,6 @@
     <title>Portfolio</title>
         
 </head>
-
-<script>
-    var slider = document.getElementById("myRange");
-    var output = document.getElementById("value");
-    output.innerHTML = slider.value;
-
-    slider.oninput = function() {
-    output.innerHTML = this.value;
-}
-</script>
-
 <body>
     <header>
         <div>
@@ -29,32 +18,16 @@
         </div>
             
     </header>
-    <div class="background"><div>
         <div class="zoom-box">hi</div>
             <!--photo-->
             <p class="photo_small">
                 <p class="photo_center">
                     <p class="center_dot">
-                        <p class="project" style="transform: rotate(22.5deg)";></p>
-                        <p class="project" style="transform: rotate(0deg)";></p>
-                        <p class="project" style="transform: rotate(45deg)";></p>
-                        <p class="project" style="transform: rotate(67.5deg)";></p>
-                        <p class="project" style="transform: rotate(90deg)";></p>
-                        <p class="project" style="transform: rotate(112.5deg)";></p>
-                        <p class="project" style="transform: rotate(135deg)";></p>
-                        <p class="project" style="transform: rotate(157.5deg)";></p>
-                        <p class="project" style="transform: rotate(180deg)";></p>
-                        <p class="project" style="transform: rotate(202.5deg)";></p>
-                        <p class="project" style="transform: rotate(225deg)";></p>
-                        <p class="project" style="transform: rotate(247.5deg)";></p>
-                        <p class="project" style="transform: rotate(270deg)";></p>
-                        <p class="project" style="transform: rotate(292.5deg)";></p>
-                        <p class="project" style="transform: rotate(315deg)";></p>
-                        <p class="project" style="transform: rotate(337.5deg)";></p>
+                        <p class="project" style="transform: rotate(0)";></p>
+
                     </p>            
                 </p>
             </p>
         </div>
-    </div>
 </body>
 </html>
