--- a/signup/signup.html
+++ b/signup/signup.html
@@ -76,7 +76,7 @@
                 "password":$("#logpass")
             },
             type:"post",
-            url:"http://localhost:8080/login",
+            url:"http://localhost:8081/auth/login",
             success:function(result){
                 console.log('result ='+ result);
                 console.log("success");
