--- a/remake/Homepage.html
+++ b/remake/Homepage.html
@@ -4,15 +4,13 @@
     <meta charset="UTF-8">
     <title>Hello World!</title>
     <link rel="stylesheet" href="./Homepage.css">
+    <script src="./Homepage.js"></script>
 </head>
 <body>
-    <nav id="topMenu">
-        <ul>
-            <li>
-                <a class="menuLink">Hello World</a>
-            </li>
-
-        </ul>
-    </nav>
+    <ul>
+        <li>
+            <a class="menuLink">Hello World</a>
+        </li>
+    </ul>
 </body>
 </html>
