--- a/Home/Home.html
+++ b/Home/Home.html
@@ -7,7 +7,7 @@
     <title>Portfolio</title>
         
 </head>
-<body>
+<body style="overflow: hidden;">
     <header>
         <div>
             <ul class="navbar">
