--- a/drag_practice/drag_practice.html
+++ b/drag_practice/drag_practice.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <title>Drag and Rotate JS</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel="stylesheet" href="./drag_practice.css">
-
+  <link rel="stylesheet" href="./drag_practice.css">
+  <script src="drag_practice.js"></script>
 </head>
 <body>
 <!-- partial:index.partial.html -->
@@ -15,9 +15,6 @@
     <div id="drag"></div>
   </div>
 </div>
-<!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="./drag_practice.js"></script>
-
 </body>
 </html>
 
