--- a/sendmail/sendmail.html
+++ b/sendmail/sendmail.html
@@ -8,8 +8,14 @@
 </head>
 
 <body>
-    <div class="container"><span style="--i:1">H</span><span style="--i:2">E</span><span style="--i:3">L</span><span
-            style="--i:4">L</span><span style="--i:5">O</span><span style="--i:6">!</span></div>
+    <div class="container">
+        <span style="--i:1">H</span>
+        <span style="--i:2">E</span>
+        <span style="--i:3">L</span>
+        <span style="--i:4">L</span>
+        <span style="--i:5">O</span>
+        <span style="--i:6">!</span>
+    </div>
 </body>
 
 </html>
