--- a/sendmail/sendmail.html
+++ b/sendmail/sendmail.html
@@ -11,8 +11,8 @@
     <div class="container">
         <span style="--i:1">H</span>
         <span style="--i:2">E</span>
-        <span style="--i:3">L</span>
-        <span style="--i:4">L</span>
+        <span style="--i:3">1</span>
+        <span style="--i:4">2</span>
         <span style="--i:5">O</span>
         <span style="--i:6">!</span>
     </div>
