--- a/remake/Homepage.html
+++ b/remake/Homepage.html
@@ -2,15 +2,21 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>Hello World!</title>
-    <link rel="stylesheet" href="./Homepage.css">
-    <script src="./Homepage.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Drag and Rotatable Wheel</title>
+    <link rel="stylesheet" href="Homepage.css">
 </head>
 <body>
-    <ul>
-        <li>
-            <a class="menuLink">Hello World</a>
-        </li>
-    </ul>
+    <div id="wheel" class="wheel">
+        <div class="box">1</div>
+        <div class="box">2</div>
+        <div class="box">3</div>
+        <div class="box">4</div>
+        <div class="box">5</div>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.0/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.0/Draggable.min.js"></script>
+    <script src="Homepage.js"></script>
+    <script src="DragCheck.js"></script>
 </body>
 </html>
