--- a/Home/Home.html
+++ b/Home/Home.html
@@ -1,33 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
-<link href="Home.css" rel="stylesheet">
-<link href="Home.js">
-<head>
-    <meta charset="UTF-8">
-    <title>Portfolio</title>
-        
-</head>
-<body style="overflow: hidden;">
-    <header>
-        <div>
-            <ul class="navbar">
-                <li><a href="" class="Portfolio_Home">Portfolio</a></li>
-                <li><a href="" class="Portfolio_Contact_Me">Contect me</a></li>
-                <li><a href="../signup/signup.html" class="login">Login</a></li>
-            </ul>
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Hello World!</title>
+    <link rel="stylesheet" href="./Home.css" />
+  </head>
+  <body>
+    <div class="header">
+      <p style="color: #142d39; left: 10px; font-size: xx-large">Hello World!</p>
+      <nav class="">
+        <a href="../Forget_password/forget_password.html">Contact me</a>
+        <a href=""></a>
+      </nav>
+    </div>
+    <div class="content">
+      <div class="circle-container">
+        <div class="circle">
+          <!-- 사각형을 원 주위에 배치 -->
+          <div class="square" style="--i: 0"></div>
+          <div class="square" style="--i: 1"></div>
+          <div class="square" style="--i: 2"></div>
+          <div class="square" style="--i: 3"></div>
+          <div class="square" style="--i: 4"></div>
+          <div class="square" style="--i: 5"></div>
+          <div class="square" style="--i: 6"></div>
+          <div class="square" style="--i: 7"></div>
+          <div class="square" style="--i: 8"></div>
+          <div class="square" style="--i: 9"></div>
+          <div class="square" style="--i: 10"></div>
+          <div class="square" style="--i: 11"></div>
+          <div class="square" style="--i: 12"></div>
+          <div class="square" style="--i: 13"></div>
+          <div class="square" style="--i: 14"></div>
+          <div class="square" style="--i: 15"></div>
         </div>
-            
-    </header>
-        <div class="zoom-box">hi</div>
-            <!--photo-->
-            <p class="photo_small">
-                <p class="photo_center">
-                    <p class="center_dot">
-                        <p class="project" style="transform: rotate(0)";></p>
+      </div>
+    </div>
 
-                    </p>            
-                </p>
-            </p>
-        </div>
-</body>
+    <script src="./Home.js"></script>
+  </body>
 </html>
