--- a/remake/Homepage.html
+++ b/remake/Homepage.html
@@ -1,22 +1,34 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Drag and Rotatable Wheel</title>
-    <link rel="stylesheet" href="Homepage.css">
-</head>
-<body>
-    <div id="wheel" class="wheel">
-        <div class="box">1</div>
-        <div class="box">2</div>
-        <div class="box">3</div>
-        <div class="box">4</div>
-        <div class="box">5</div>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Hello World!</title>
+    <link rel="stylesheet" href="./Homepage.css" />
+  </head>
+  <body>
+    <div class="header">
+      <p style="color: #142d39; left: 10px; font-size: xx-large">Hello World!</p>
+      <nav class="">
+        <a href="../Forget_password/forget_password.html">Contact me</a>
+        <a href=""></a>
+      </nav>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.0/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.0/Draggable.min.js"></script>
-    <script src="Homepage.js"></script>
-    <script src="DragCheck.js"></script>
-</body>
+    <div class="content">
+      <div class="circle-container">
+        <div class="circle">
+          <!-- 사각형을 원 주위에 배치 -->
+          <div class="square" style="--i: 0" onclick="location.href='https://yoo-hyeok.tistory.com/47'"><p>이것이 1번이연</p></div>
+          <div class="square" style="--i: 1"></div>
+          <div class="square" style="--i: 2"></div>
+          <div class="square" style="--i: 3"></div>
+          <div class="square" style="--i: 4"></div>
+          <div class="square" style="--i: 5"></div>
+          <div class="square" style="--i: 6"></div>
+          <div class="square" style="--i: 7"></div>
+        </div>
+      </div>
+    </div>
+
+    <script src="./Homepage.js"></script>
+  </body>
 </html>
