--- a/remake/Homepage.html
+++ b/remake/Homepage.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Hello World!</title>
     <link rel="stylesheet" href="./Homepage.css" />
+    <link rel="stylesheet" href="./project.css" />
   </head>
   <body>
     <div class="header">
@@ -14,21 +15,36 @@
       </nav>
     </div>
     <div class="content">
+
+      <div>
+
+      </div>
+
+
       <div class="circle-container">
         <div class="circle">
-          <!-- 사각형을 원 주위에 배치 -->
-          <div class="square" style="--i: 0" onclick="location.href='https://yoo-hyeok.tistory.com/47'"><p>이것이 1번이연</p></div>
-          <div class="square" style="--i: 1"></div>
-          <div class="square" style="--i: 2"></div>
-          <div class="square" style="--i: 3"></div>
-          <div class="square" style="--i: 4"></div>
-          <div class="square" style="--i: 5"></div>
-          <div class="square" style="--i: 6"></div>
-          <div class="square" style="--i: 7"></div>
+          <div class="circle-display">
+            <!--원 안에있는 쪼꼬만거-->
+            <p>.</p>
+          </div>
+
+          <div class="square" style="--i: 0" onclick="physicalGuide()">
+            <div class="physicalGuide">
+              <p>피지컬 가이드여</p>
+            </div>
+          </div>
+          <div class="square" style="--i: 1" onclick="mojoAi()"></div>
+          <div class="square" style="--i: 2" onclick="midasHachathon()"></div>
+          <div class="square" style="--i: 3" onclick="numberClock()"></div>
+          <div class="square" style="--i: 4" onclick="somein()"></div>
+          <div class="square" style="--i: 5" onclick="stepAssister()"></div>
+          <div class="square" style="--i: 6" onclick="petpong()"></div>
+          <div class="square" style="--i: 7" onclick=""></div>
+          
         </div>
       </div>
     </div>
-
+    <script src="./projects.js"></script>
     <script src="./Homepage.js"></script>
   </body>
 </html>
