project js, css 분리

--- a/remake/Homepage.html
+++ b/remake/Homepage.html
@@ -39,12 +39,11 @@
           <div class="square" style="--i: 4" onclick="somein()"></div>
           <div class="square" style="--i: 5" onclick="stepAssister()"></div>
           <div class="square" style="--i: 6" onclick="petpong()"></div>
-          <div class="square" style="--i: 7" onclick=""></div>
-          
+          <div class="square" style="--i: 7" onclick="memo()"></div>
         </div>
       </div>
     </div>
-    <script src="./projects.js"></script>
     <script src="./Homepage.js"></script>
+    <script src="./projects.js"></script>
   </body>
 </html>
