그냥 문자 수정해봣오

--- a/sendmail/sendmail.html
+++ b/sendmail/sendmail.html
@@ -3,7 +3,6 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Somei인 인증코드입니다</title>
     <link rel="stylesheet" href="./sendmail.css">
 </head>
 
@@ -11,8 +10,8 @@
     <div class="container">
         <span style="--i:1">H</span>
         <span style="--i:2">E</span>
-        <span style="--i:3">1</span>
-        <span style="--i:4">2</span>
+        <span style="--i:3">L</span>
+        <span style="--i:4">L</span>
         <span style="--i:5">O</span>
         <span style="--i:6">!</span>
     </div>
