방명록 말고 노션으로 링크 변경

--- a/remake/Homepage.html
+++ b/remake/Homepage.html
@@ -2,22 +2,23 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <title>Hello World!</title>
+    <title>취준생</title>
     <link rel="stylesheet" href="./Homepage.css" />
     <link rel="stylesheet" href="./project.css" />
   </head>
   <body>
     <div class="header">
-      <p style="color: #142d39; left: 10px; font-size: xx-large">Hello World!</p>
+      <p style="color: #142d39; left: 10px; font-size: xx-large">취준생</p>
       <nav class="">
         <a href="../Forget_password/forget_password.html">Contact me</a>
-        <a href=""></a>
       </nav>
     </div>
     <div class="content">
 
-      <div>
+      <div class="project_container">
+        <div>
 
+        </div>
       </div>
 
 
@@ -39,7 +40,7 @@
           <div class="square" style="--i: 4" onclick="somein()"></div>
           <div class="square" style="--i: 5" onclick="stepAssister()"></div>
           <div class="square" style="--i: 6" onclick="petpong()"></div>
-          <div class="square" style="--i: 7" onclick="memo()"></div>
+          <div class="square" style="--i: 7" onclick="notion()"></div>
         </div>
       </div>
     </div>
