오탈자 수정 & css 추가

--- a/remake/Homepage.html
+++ b/remake/Homepage.html
@@ -35,7 +35,7 @@
             </div>
           </div>
           <div class="square" style="--i: 1" onclick="mojoAi()"></div>
-          <div class="square" style="--i: 2" onclick="midasHachathon()"></div>
+          <div class="square" style="--i: 2" onclick="midasHackathon()"></div>
           <div class="square" style="--i: 3" onclick="numberClock()"></div>
           <div class="square" style="--i: 4" onclick="somein()"></div>
           <div class="square" style="--i: 5" onclick="stepAssister()"></div>
