페이지 설명 게시

--- a/remake/Homepage.html
+++ b/remake/Homepage.html
@@ -34,17 +34,45 @@
               <p>피지컬 가이드여</p>
             </div>
           </div>
-          <div class="square" style="--i: 1" onclick="mojoAi()"></div>
-          <div class="square" style="--i: 2" onclick="midasHackathon()"></div>
-          <div class="square" style="--i: 3" onclick="numberClock()"></div>
-          <div class="square" style="--i: 4" onclick="somein()"></div>
-          <div class="square" style="--i: 5" onclick="stepAssister()"></div>
-          <div class="square" style="--i: 6" onclick="petpong()"></div>
-          <div class="square" style="--i: 7" onclick="notion()"></div>
+          <div class="square" style="--i: 1" onclick="mojoAi()">
+            <div class="mojoAi">
+              <p>파이썬으로 만든 인공지능이여</p>
+            </div>
+          </div>
+          <div class="square" style="--i: 2" onclick="midasHackathon()">
+            <div class="midasHackathon">
+              <p>마이다스 해커톤이여</p>
+            </div>
+          </div>
+          <div class="square" style="--i: 3" onclick="numberClock()">
+            <div class="numberClock">
+              <p>시, 분, 초침이 숫자인 시계여</p>
+            </div>
+          </div>
+          <div class="square" style="--i: 4" onclick="somein()">
+            <div class="somein">
+              <p>somein 커뮤니티여</p>
+            </div>
+          </div>
+          <div class="square" style="--i: 5" onclick="stepAssister()">
+            <div class="stepAssister">
+              <p>세상을 보는 또다른 눈</p>
+            </div>
+          </div>
+          <div class="square" style="--i: 6" onclick="petpong()">
+            <div class="petpong">
+              <p>반려동물 플랫폼</p>
+            </div>
+          </div>
+          <div class="square" style="--i: 7" onclick="notion()">
+            <div class="notion">
+              <p>notion 사이트</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
     <script src="./Homepage.js"></script>
     <script src="./projects.js"></script>
-  </body>
+</body>
 </html>
